--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "express": "^4.13.4",
     "body-parser": "^1.15.0",
     "express": "^4.13.4",
     "imap": "^0.8.17",
