--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "config":"^1.2.1",
     "js-base64":"^2.1.9",
     "md5":"^2.1.0",
-    "striptags":"^2.1.1"
+    "striptags":"^2.1.1",
+    "quoted-printable","^1.0.0"
   },
   "devDependencies": {
     "chai":"^3.5.0",
