search support. avoid imap.sort, imap.thread, and imap.seach - enqueue raw commands instead

--- a/config/production.json.dist
+++ b/config/production.json.dist
@@ -5,7 +5,9 @@
     "ssl": false
   },
   "Server" {
-    "port": 3000
+    "port": 3000,
+    "utf-8": true,
+    "threads":"REFERENCES"
   },
   "Options": {
     "prefer_RFC6154": true,
