--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "md5":"^2.1.0",
     "striptags":"^2.1.1",
     "quoted-printable":"^1.0.0",
-    "is-html":"^1.0.0"
+    "is-html":"^1.0.0",
+    "imap-promise":"^1.0.2"
   },
   "devDependencies": {
     "chai":"^3.5.0",
